# Sistem-Inteligent-Analize

./: .env.example  .gitattributes  .gitignore  99_DEEP_DIVE_REPORT.md  AUDIT_REPORT.md  CLAUDE.md  CREATE_SHORTCUT.ps1  DEEP_RESEARCH_EXTINDERE_RIS.md  FUNCTII_SISTEM.md  ISSUES.md  MANAGE_SERVICE.bat  Mosslein.html  README.md  RIS.vbs  RIS_TEST.bat  ROLAND_PLANIFICARI_MODULE.md  ROLAND_R7_EXECUTOR.md  ROLAND_R8_EXECUTOR.md  ROLAND_R9_EXECUTOR.md  ROLAND_UPDATE_FULL.md  SETUP_SERVICE.bat  SPEC_INTELLIGENCE_SYSTEM.md  SPEC_INTELLIGENCE_SYSTEM_V2.md  START_PWA.md  START_RIS.vbs  START_RIS_TAILSCALE.bat  START_RIS_silent.bat  STOP_RIS.vbs  STOP_RIS_silent.bat  TEMPLATE_PLANIFICARE_PROIECT_V2.md  TODO_R14_REMAINING.md  TODO_ROLAND.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
99_Deep_Research/: Audit_Intern_Roland.md  Cercetare_Skill_Tool_MCP.md  RAPORT.md  ROADMAP_IMBUNATATIRI.md
99_Plan_vs_Audit/: Audit_R5.md  RECOMANDARI_IMBUNATATIRI.md  RECOMANDARI_IMBUNATATIRI_R2.md  RECOMANDARI_IMBUNATATIRI_R3.md  RECOMANDARI_IMBUNATATIRI_R4.md  RECOMANDARI_IMBUNATATIRI_R5.md  RECOMANDARI_IMBUNATATIRI_R6.md  RECOMANDARI_IMBUNATATIRI_R7.md  RECOMANDARI_IMBUNATATIRI_R8.md  TOP20_AI_API_GRATUITE_2026.md
backend/: config.py  database.py  errors.py  http_client.py  main.py  middlewares.py  models.py  rate_limiter.py  security.py  static_serving.py  utils.py  ws.py
data/: funding_programs.json
docs/: FUNCTII_SISTEM.html  FUNCTII_SISTEM.md  PROMPT_CLAUDE_CODE.md  PROMPT_TEMPLATE_V3.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  (+2 more)
(+161 files in other folders)
